--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "normalize.css": "8.0.1",
     "run-sequence": "^2.2.1",
     "ssri": "^6.0.1",
-    "strip-json-comments": "^2.0.1"
+    "strip-json-comments": "^2.0.1",
+    "browser-sync": "^2.14.0"
   },
   "engines": {
     "node": ">=6",
@@ -48,6 +49,7 @@
   "license": "MIT",
   "name": "html5-boilerplate",
   "scripts": {
+    "start": "browser-sync start -s --files 'dist/**/*.(js|css|html)' --ss 'dist' --port 8080 --reload-debounce 500",
     "build": "gulp build",
     "test": "gulp archive && mocha --require babel-core/register --reporter spec --timeout 5000"
   },
