--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "normalize.css": "8.0.1",
     "run-sequence": "^2.2.1",
     "ssri": "^6.0.1",
-    "strip-json-comments": "^2.0.1",
-    "browser-sync": "^2.14.0"
+    "strip-json-comments": "^2.0.1"
   },
   "engines": {
     "node": ">=6",
@@ -66,5 +65,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/h5bp/html5-boilerplate.git"
+  },
+  "dependencies": {
+    "browser-sync": "^2.26.3"
   }
 }
