--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "license": "MIT",
   "name": "html5-boilerplate",
   "scripts": {
-    "start": "browser-sync start -s --no-ui --files 'dist/**/*.(js|css|html)' --ss 'dist' --port 8080 --reload-debounce 500",
+    "start": "http-server './dist'",
     "build": "gulp build",
     "test": "gulp archive && mocha --require babel-core/register --reporter spec --timeout 5000"
   },
@@ -67,6 +67,6 @@
     "url": "https://github.com/h5bp/html5-boilerplate.git"
   },
   "dependencies": {
-    "browser-sync": "^2.26.3"
+    "http-server": "^0.11.1"
   }
 }
